tests/paczka1/fuzzy1/85237470.err
Error in line 1: pJMf1 A79 20,9
Error in line 5: K93DsE A891 998,1
Error in line 10: pJMf1 S728 71,7
Error in line 11: K93DsE A34 6,3
Error in line 17: 491HOG A79 39,6
Error in line 14: 7TDBH7gd A891 45,6
Error in line 19: 491HOG S728 48,5
Error in line 18: K93DsE S728 74,7
Error in line 12: pJMf1 A891 52,2
Error in line 23: K93DsE A79 84,7
Error in line 25: pJMf1 A79 48,0
Error in line 31: knM7bNYXQ A891 70,7
Error in line 21: 491HOG A34 75,3
